--- a/session2.ipynb
+++ b/session2.ipynb
@@ -389,6 +389,37 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 73,
+   "id": "bd16e7be",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "276\n"
+     ]
+    }
+   ],
+   "source": [
+    "n = int(input(\"Enter an integer\"))\n",
+    "\n",
+    "sum = 0\n",
+    "i = 1\n",
+    "while i<=n:\n",
+    "    if i%5 != 0:\n",
+    "        sum += i\n",
+    "\n",
+    "    if sum+i > 300:\n",
+    "        break\n",
+    "\n",
+    "    i = i+1\n",
+    "\n",
+    "print(sum)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "b1c205e3",
    "metadata": {},
