--- a/session3.ipynb
+++ b/session3.ipynb
@@ -17,9 +17,90 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "id": "38acfa3d",
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "54321\n",
+      "4321\n",
+      "321\n",
+      "21\n",
+      "1\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(5,0,-1):\n",
+    "    for j in range(i,0,-1):\n",
+    "        print(j,end=' ')\n",
+    "    print()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3c5b4eee",
+   "metadata": {},
+   "source": [
+    "### `Problem 2`: Print the following pattern.\n",
+    "\n",
+    "```bash\n",
+    "* \n",
+    "* * \n",
+    "* * * \n",
+    "* * * * \n",
+    "* * * * * \n",
+    "* * * * \n",
+    "* * * \n",
+    "* * \n",
+    "*\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "c814c233",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "* \n",
+      "* * \n",
+      "* * * \n",
+      "* * * * \n",
+      "* * * * * \n",
+      "* * * * \n",
+      "* * * \n",
+      "* * \n",
+      "* \n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(1,6):\n",
+    "    for j in range(1,i+1):\n",
+    "        print(\"*\",end=\" \")    \n",
+    "    print()\n",
+    "\n",
+    "for i in range(4,0,-1):\n",
+    "    for j in range(i,0,-1):\n",
+    "        print(\"*\",end=\" \")\n",
+    "    print()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b158e2ba",
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
@@ -30,7 +111,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.12.12"
   }
  },
