--- a/session3.ipynb
+++ b/session3.ipynb
@@ -96,9 +96,137 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "b158e2ba",
+   "metadata": {},
+   "source": [
+    "### `Problem 3`:Write a program to pring the following pattern\n",
+    "\n",
+    "        *\n",
+    "      * * *\n",
+    "    * * * * *\n",
+    "   * * * * * * *\n",
+    "* * * * * * * * *\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "4aa4c206",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "    * \n",
+      "   * * * \n",
+      "  * * * * * \n",
+      " * * * * * * * \n",
+      "* * * * * * * * * \n"
+     ]
+    }
+   ],
+   "source": [
+    "rows = 5\n",
+    "\n",
+    "for i in range(1, rows + 1):\n",
+    "    # Print leading spaces\n",
+    "    print(\" \" * (rows - i), end=\"\")\n",
+    "\n",
+    "    # Print stars with space\n",
+    "    print(\"* \" * (2 * i - 1))\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2e3c9d38",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b3e67839",
+   "metadata": {},
+   "source": [
+    "### `Problem 4`:Write a program to print the following pattern\n",
+    "\n",
+    "1 \n",
+    "\n",
+    "2 1 \n",
+    "\n",
+    "3 2 1 \n",
+    "\n",
+    "4 3 2 1 \n",
+    "\n",
+    "5 4 3 2 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "e2b37cda",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 \n",
+      "2 1 \n",
+      "3 2 1 \n",
+      "4 3 2 1 \n",
+      "5 4 3 2 1 \n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(1,6):\n",
+    "    for j in range(i,0,-1):\n",
+    "        print(j,end=\" \")\n",
+    "    print()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d38690f1",
+   "metadata": {},
+   "source": [
+    "### `Problem 5`: Write a Python Program to Find the Sum of the Series till the nth term:<br> \n",
+    "1 + x^2/2 + x^3/3 + … x^n/n<br>\n",
+    "n will be provided by the user"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "fdc2dcdc",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "16.066666666666666\n"
+     ]
+    }
+   ],
+   "source": [
+    "n = int(input(\"Enter the value of n \"))\n",
+    "x = int(input(\"Enter the value of x \"))\n",
+    "\n",
+    "sum = 1\n",
+    "\n",
+    "for i in range(2,n+1):\n",
+    "    sum = sum + (x**i)/i\n",
+    "\n",
+    "print(sum)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b158e2ba",
+   "id": "7382bf87",
    "metadata": {},
    "outputs": [],
    "source": []
